--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 
 <head>
     <meta charset="utf-8">
-    <title>My First Page</title>
+    <title>index.html</title>
 </head>
 
 <body>
 
     <h1>Hello world!</h1>
+
+    <a href="vis1.html"> vis1 </a>
 
 </body>
 
