adding more subpage links to index

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <h1>Hello world!</h1>
 
     <a href="vis1.html"> vis1 </a>
+    <a href="vis2.html"> vis2 </a>
+    <a href="vis3.html"> vis3 </a>
+    <a href="vis4.html"> vis4 </a>
+    <a href="comparisons.html"> comparisons </a>
+    <a href="data.html"> data </a>
 
 </body>
 
