initial commit of completed assignment

--- a/comparison.html
+++ b/comparison.html
@@ -53,43 +53,26 @@
 
     <div class="container">
         <div class="row"> <!--1st Row-->
-            <div class="col-md-7">
 
-                <div class="main-content">
-                    <h1>Summary: Latitude vs. X</h1>
-                    <hr>
-                    <img src="figs/Fig1.png" width=250px alt="Latitude vs Temperature" class="img-float-left">
-                    <p> 
-                        The purpose of this project was to analyze how weather changes as you get closer 
-                        to the equator.  To accomplish this analysis, we first pulled data from the
-                        OpenWeatherMap API to assembled a dataset on over 500 cities.
-                    </p>
-                    <p>
-                        After assembling the dataset, we used Matplotlib to plot various aspects of the
-                        weather vs. latitude.  Factors we looked at included: temperature, cloudiness,
-                        wind speed, and humidity.  This site provides the source data and visualizations
-                        created as part of the analysis, as well as explanations and descriptions of any
-                        observed trends and correlations.
-                    </p>
-                </div>
-
-            </div>
-
-            <div class="col-md-5">
-
+            <div class="col-md-12">
+                
                 <div class="secondary-content">
-                    <h1>Visualizations</h1>
+                    <h1>Comparisons: Latitude vs. X</h1>
                     <hr>
+
+                    <h5>Click any figure below for in-depth detail:</h5>
 
                     <div class="row-two-figs">
                         <div class="row-two-figs-el">
                             <a class="fig-link" href="vsTemp.html">
-                                <img src="figs/Fig1.png" width=150px alt="Latitude vs Temperature">
+                                <h4 >vs. Max Temperature</h4>
+                                <img src="figs/Fig1.png" width=500px alt="Latitude vs Temperature">
                             </a>
                         </div>
                         <div class="row-two-figs-el">
                             <a class="fig-link" href="vsHumid.html">
-                                <img src="figs/Fig2.png" width=150px alt="Latitude vs Humidity">
+                                <h4>vs Humidity</h4>
+                                <img src="figs/Fig2.png" width=500px alt="Latitude vs Humidity">
                             </a>
                         </div>
                     </div>
@@ -97,12 +80,14 @@
                     <div class="row-two-figs">
                         <div class="row-two-figs-el">
                             <a class="fig-link" href="vsCloud.html">
-                                <img class="fig-border" src="figs/Fig3.png" width=150px alt="Latitude vs Cloudiness">
+                                <h4>vs Cloudiness</h4>
+                                <img src="figs/Fig3.png" width=500px alt="Latitude vs Cloudiness">
                             </a>
                         </div>
                         <div class="row-two-figs-el">
                             <a class="fig-link" href="vsWindSpeed.html">
-                                <img src="figs/Fig4.png" width=150px alt="Latitude vs Wind Speed">
+                                <h4>vs Wind Speed</h4>
+                                <img src="figs/Fig4.png" width=500px alt="Latitude vs Wind Speed">
                             </a>
                         </div>
                     </div>      
