--- a/plots.html
+++ b/plots.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="utf-8">
-    <title>vis1</title>
+    <title>plots</title>
 </head>
 
 <body>
 
-    <h1>vis1</h1>
+    <h1>plots</h1>
 
 </body>
 
