--- a/vsHumid.html
+++ b/vsHumid.html
@@ -56,20 +56,12 @@
             <div class="col-md-7">
 
                 <div class="main-content">
-                    <h1>Summary: Latitude vs. X</h1>
+                    <h1>Latitude vs. Humidity</h1>
                     <hr>
-                    <img src="figs/Fig1.png" width=250px alt="Latitude vs Temperature" class="img-float-left">
+                    <img src="figs/Fig2.png" width=500px alt="Latitude vs Humidity" class="img-main">
                     <p> 
-                        The purpose of this project was to analyze how weather changes as you get closer 
-                        to the equator.  To accomplish this analysis, we first pulled data from the
-                        OpenWeatherMap API to assembled a dataset on over 500 cities.
-                    </p>
-                    <p>
-                        After assembling the dataset, we used Matplotlib to plot various aspects of the
-                        weather vs. latitude.  Factors we looked at included: temperature, cloudiness,
-                        wind speed, and humidity.  This site provides the source data and visualizations
-                        created as part of the analysis, as well as explanations and descriptions of any
-                        observed trends and correlations.
+                        Humidity does not strongly correlate to latitude.  'Pinned' values of 0% and 100% 
+                        are disproportionately common, and the average humidity is greater than 50%.
                     </p>
                 </div>
 
@@ -80,7 +72,7 @@
                 <div class="secondary-content">
                     <h1>Visualizations</h1>
                     <hr>
-
+                    
                     <div class="row-two-figs">
                         <div class="row-two-figs-el">
                             <a class="fig-link" href="vsTemp.html">
@@ -89,7 +81,7 @@
                         </div>
                         <div class="row-two-figs-el">
                             <a class="fig-link" href="vsHumid.html">
-                                <img src="figs/Fig2.png" width=150px alt="Latitude vs Humidity">
+                                <img class="img-border" src="figs/Fig2.png" width=150px alt="Latitude vs Humidity">
                             </a>
                         </div>
                     </div>
@@ -97,7 +89,7 @@
                     <div class="row-two-figs">
                         <div class="row-two-figs-el">
                             <a class="fig-link" href="vsCloud.html">
-                                <img class="fig-border" src="figs/Fig3.png" width=150px alt="Latitude vs Cloudiness">
+                                <img src="figs/Fig3.png" width=150px alt="Latitude vs Cloudiness">
                             </a>
                         </div>
                         <div class="row-two-figs-el">
@@ -105,7 +97,8 @@
                                 <img src="figs/Fig4.png" width=150px alt="Latitude vs Wind Speed">
                             </a>
                         </div>
-                    </div>      
+                    </div>
+                
                 </div>  
             </div>
 
